# mlperf-automations

./: .gitignore  404.html  CONTRIBUTORS.md  HISTORY.md  README.md  flow.md  git_commit_hash.txt  index.html  meta.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
.github/scripts/: list_modified_files.py  list_modified_scripts_with_secrets.py  process_individual_tests.py
.github/workflows/: build_wheel.yml  build_wheel_off.yml  build_wheels.yml  build_wheels_on_release.yml  check-broken-links.yml  codeql.yml  document-scripts.yml  format.yml  publish-docs.yaml  reset-fork.yml  run-individual-script-tests.yml  run-tests-on-modified-meta-with-secret.yml  run-tests-on-modified-meta.yml  run_tests_on_modified_meta_with_secrets.yml  test-amd-mlperf-inference-implementations.yml  test-cm-based-submission-generation.yml  test-cm-script-features.yml  test-cm-tutorial-retinanet.yml  test-cm-tutorial-tvm-pip.yml  test-cm-tutorial-tvm.yml  test-cm4mlops-wheel-ubuntu.yml  test-image-classification-onnx.yml  test-intel-mlperf-inference-implementations.yml  test-mlc-based-submission-generation.yml  test-mlc-script-features.yml  test-mlc-script-pip.yml  test-mlc-tutorial-retinanet.yml  test-mlc-tutorial-tvm.yml  test-mlcscripts-wheel.yml  test-mlperf-automotive-submission-generation.yml  test-mlperf-automotive.yml  test-mlperf-inference-abtf-poc.yml  test-mlperf-inference-dlrm.yml  (+20 more)
automation/: utils.py
docs/: getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
(+1159 files in other folders)
